--- a/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxss
+++ b/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxss
@@ -1,5 +1,10 @@
 @import '../../common.wxss';
 
+.iot-pusher {
+  box-sizing: border-box;
+  position: relative;
+}
+
 .pusher-container {
   box-sizing: border-box;
   position: relative;
