--- a/demo/miniprogram/pages/test-p2p-pusher/pusher.wxml
+++ b/demo/miniprogram/pages/test-p2p-pusher/pusher.wxml
@@ -20,7 +20,7 @@
         bind:pusherError="onPusherError"
         bind:error="onLivePusherError"
         bind:statechange="onLivePusherStateChange"
-        bind:netstatus="onLivePusherNetStatusChange"
+        bind:netstatus="onLivePusherNetStatus"
       />
       <view class="video-info">
         <view class="text-box lines-3">
