--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
@@ -1,29 +1,50 @@
-<view class="component iot-p2p-player-ipc">
-  <view class="component-section">
+<view class="iot-p2p-player-ipc">
+  <view class="player-wrap">
     <iot-p2p-common-player
+      wx:if="{{innerOptions}}"
       id="{{playerId}}"
-      mode="ipc"
+      class="{{playerClass}}"
+      p2pMode="ipc"
+      mode="{{innerOptions.playerRTC ? 'RTC' : 'live'}}"
       targetId="{{targetId}}"
       flvUrl="{{flvUrl}}"
-      autoReplay="{{type === 'live'}}"
+      autoReplay="{{sceneType === 'live'}}"
+      superMuted="{{superMuted}}"
+      parseLivePlayerInfo="{{!innerOptions.needMjpg}}"
+      showLog="{{!innerOptions.needMjpg}}"
       productId="{{productId}}"
       deviceName="{{deviceName}}"
       xp2pInfo="{{xp2pInfo}}"
       liveStreamDomain="{{liveStreamDomain}}"
       checkFunctions="{{checkFunctions}}"
-      onlyp2p="{{onlyp2p}}"
+      onlyp2p="{{onlyp2pMap && onlyp2pMap.flv}}"
       bind:p2pStateChange="onP2PStateChange"
       bind:streamStateChange="onStreamStateChange"
       bind:playError="passEvent"
       bind:systemPermissionDenied="passEvent"
     />
+    <iot-p2p-mjpg-player
+      wx:if="{{innerOptions && innerOptions.needMjpg}}"
+      id="{{mjpgPlayerId}}"
+      targetId="{{targetId}}"
+      productId="{{productId}}"
+      deviceName="{{deviceName}}"
+      mainStreamType="{{streamType}}"
+      mainStreamState="{{streamState}}"
+      mjpgFile="{{mjpgFile}}"
+      onlyp2p="{{onlyp2pMap && onlyp2pMap.mjpg}}"
+      bind:playerStateChange="onMjpgPlayerStateChange"
+      bind:playError="onMjpgPlayError"
+    />
   </view>
-  <view wx:if="{{type === 'live'}}">
+  <view>playerMode: {{innerOptions.playerRTC ? 'RTC' : 'live'}}</view>
+  <view wx:if="{{sceneType === 'live'}}">
     <view wx:if="{{needDuplex}}" class="component-section">
       <view class="component-section-title">双向音视频</view>
       <iot-p2p-common-pusher
         id="{{pusherId}}"
         enableCamera="{{true}}"
+        enableMic="{{true}}"
         bind:pusherStateChange="onPusherStateChange"
         bind:pusherStartPush="onPusherStartPush"
         bind:pusherClose="onPusherClose"
@@ -40,9 +61,19 @@
         </button>
       </view>
     </view>
-    <view class="component-section">
-      <view class="component-section-title">PTZ控制</view>
-      <view class="ptz-panel-wrap">
+    <view wx:else>
+      <view class="component-section group-button-area">
+        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=super" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          超清
+        </button>
+        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=high" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          高清
+        </button>
+        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=standard" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          标清
+        </button>
+      </view>
+      <view class="component-section ptz-panel-wrap">
         <view class="ptz-panel">
           <view class="ptz-controls">
             <view class="ptz-controls-top">
@@ -58,12 +89,83 @@
                   </view>
                 </view>
                 <view class="ptz-cricle">
-                  <view wx:if="{{!needDuplex}}" class="voice-btn" bindtap="toggleVoice" data-voice-type="{{needPusher ? 'Pusher' :'Recorder'}}" data-recorder-cfg="1-8000-16000">
+                  <view class="voice-btn" bindtap="toggleVoice" data-voice-type="{{needPusher ? 'Pusher' : 'Recorder'}}" data-recorder-cfg="1-8000-16000">
                     <view class="voice-icon {{voiceState === 'sending' ? 'press' : ''}}"><text>{{voiceType+'\n'+voiceState}}</text></view>
                   </view>
                 </view>
               </view>
             </view>
+          </view>
+        </view>
+      </view>
+      <view class="component-section">
+        <view class="component-section-title">{{needPusher ? 'Pusher' : 'Recorder'}}语音对讲</view>
+        <view wx:if="{{needPusher}}">
+          <iot-p2p-common-pusher
+            id="{{pusherId}}"
+            mode="{{pusherProps.isRTC ? 'RTC' : 'SD'}}"
+            enableCamera="{{false}}"
+            enableMic="{{true}}"
+            enableAgc="{{pusherProps.enableAgc}}"
+            enableAns="{{pusherProps.enableAns}}"
+            audioQuality="{{pusherProps.highQuality ? 'high' : 'low'}}"
+            bind:pusherStateChange="onPusherStateChange"
+            bind:pusherStartPush="onPusherStartPush"
+            bind:pusherClose="onPusherClose"
+            bind:pushError="onPusherPushError"
+            style="display: none"
+          />
+          <view>pusherReady: {{pusherReady}}</view>
+          <view>pusherProps:</view>
+          <view wx:for="{{pusherPropChecks}}" wx:key="field" class="pusher-prop-item">
+            <label>
+              <switch type="checkbox"
+                checked="{{pusherProps[item.field]}}"
+                data-field="{{item.field}}"
+                data-index="{{index}}"
+                disabled="{{voiceState && voiceState !== 'error'}}"
+                bindchange="switchPusherPropCheck"
+              />
+              {{item.text}}
+            </label>
+          </view>
+          <view class="group-button-area">
+            <button bindtap="startVoice" data-voice-type="Pusher" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !pusherReady || (voiceState && voiceState !== 'error')}}">
+              对讲
+            </button>
+            <button bindtap="startVoice" data-voice-type="Pusher" data-need-record="1" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !pusherReady || (voiceState && voiceState !== 'error')}}">
+              对讲+录制
+            </button>
+            <button bindtap="stopVoice" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !voiceState || voiceState === 'error'}}">
+              挂断
+            </button>
+          </view>
+        </view>
+        <view wx:else>
+          <view>对讲期间:</view>
+          <view>
+            <radio-group bindchange="voiceOpChanged" style="display: flex;">
+              <label class="weui-cell weui-check__label">
+                <radio value="none" checked="{{voiceOp === 'none'}}" disabled="{{voiceState && voiceState !== 'error'}}"/>正常播放
+              </label>
+              <label class="weui-cell weui-check__label">
+                <radio value="mute" checked="{{voiceOp === 'mute'}}" disabled="{{voiceState && voiceState !== 'error'}}"/>静音
+              </label>
+              <!-- <label class="weui-cell weui-check__label">
+                <radio value="pause" checked="{{voiceOp === 'pause'}}" disabled="{{voiceState && voiceState !== 'error'}}"/>暂停
+              </label> -->
+            </radio-group>
+          </view>
+          <view class="group-button-area">
+            <button bindtap="startVoice" data-recorder-cfg="1-8000-16000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState && voiceState !== 'error')}}">
+              Recorder-单
+            </button>
+            <button bindtap="startVoice" data-recorder-cfg="2-44100-192000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState && voiceState !== 'error')}}">
+              Recorder-双
+            </button>
+            <button bindtap="stopVoice" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !voiceState || voiceState === 'error'}}">
+              挂断
+            </button>
           </view>
         </view>
       </view>
@@ -80,51 +182,6 @@
       </view>
     </view> -->
     <view class="component-section">
-      <view class="component-section-title">切换清晰度</view>
-      <view class="group-button-area">
-        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=super" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-          超清
-        </button>
-        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=high" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-          高清
-        </button>
-        <button bindtap="changeQuality" data-flv="ipc.flv?action=live&channel=0&quality=standard" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
-          标清
-        </button>
-      </view>
-    </view>
-    <view wx:if="{{!needDuplex}}" class="component-section">
-      <view class="component-section-title">语音对讲</view>
-      <view wx:if="{{needPusher}}">
-        <iot-p2p-common-pusher
-          id="{{pusherId}}"
-          enableCamera="{{false}}"
-          bind:pusherStateChange="onPusherStateChange"
-          bind:pusherStartPush="onPusherStartPush"
-          bind:pusherClose="onPusherClose"
-          bind:pushError="onPusherPushError"
-          style="display: none"
-        />
-        <view>pusherReady: {{pusherReady}}</view>
-      </view>
-      <view>voiceType: {{voiceType}}</view>
-      <view>voiceState: {{voiceState}}</view>
-      <view class="group-button-area">
-        <button bindtap="startVoice" data-recorder-cfg="1-8000-16000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState && voiceState !== 'error')}}">
-          Recorder-单
-        </button>
-        <button bindtap="startVoice" data-recorder-cfg="2-44100-192000" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || (voiceState && voiceState !== 'error')}}">
-          Recorder-双
-        </button>
-        <button wx:if="{{needPusher}}" bindtap="startVoice" data-voice-type="Pusher" data-need-record="1" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !pusherReady || (voiceState && voiceState !== 'error')}}">
-          Pusher+录制
-        </button>
-        <button bindtap="stopVoice" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !voiceState || voiceState === 'error'}}">
-          挂断
-        </button>
-      </view>
-    </view>
-    <view class="component-section">
       <view class="component-section-title">内置信令</view>
       <view class="group-button-area">
         <button bindtap="sendInnerCommand" data-cmd-name="getLiveStatus" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
@@ -136,7 +193,7 @@
       </view>
     </view>
   </view>
-  <view wx:if="{{type === 'playback'}}">
+  <view wx:if="{{sceneType === 'playback'}}">
     <view class="component-section">
       <view class="component-section-title">当前录像</view>
       <view class="text-box">
@@ -163,7 +220,7 @@
       </view>
     </view>
     <view class="component-section">
-      <view class="component-section-title">查询录像</view>
+      <view class="component-section-title">查询录像/文件</view>
       <view>
         <view class="weui-cells weui-cells_after-title">
           <view class="weui-cell weui-cell_input">
@@ -181,6 +238,9 @@
         </button>
         <button bindtap="getRecordVideos" data-cmd-name="getRecordVideos" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
           获取该日录像列表
+        </button>
+        <button bindtap="getVideoList" data-cmd-name="getVideoList" class="group-button" type="primary" size="mini" disabled="{{!p2pReady}}">
+          获取该日视频文件列表
         </button>
       </view>
     </view>
@@ -200,7 +260,20 @@
         </button>
         <!-- 本地下载依赖SDK支持 -->
         <button bindtap="downloadRecord" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !inputPlaybackTime}}">
-          开始下载
+          下载
+        </button>
+      </view>
+    </view>
+    <view class="component-section">
+      <view class="component-section-title">下载文件</view>
+      <view class="weui-cells weui-cells_after-title">
+        <view class="weui-cell weui-cell_input">
+          <input class="weui-input" type="text" value="{{inputDownloadFilename}}" placeholder="请输入要下载的文件名" placeholder-class="placeholder" bindinput="inputIPCDownloadFilename" />
+        </view>
+      </view>
+      <view class="group-button-area">
+        <button bindtap="downloadInputFile" class="group-button" type="primary" size="mini" disabled="{{!p2pReady || !inputDownloadFilename}}">
+          添加到下载
         </button>
         <button bindtap="stopDownload" class="group-button" type="primary" size="mini" disabled="{{downloadList.length === 0}}">
           停止下载
