--- a/demo/miniprogram/pages/test-p2p-player/player.wxml
+++ b/demo/miniprogram/pages/test-p2p-player/player.wxml
@@ -13,7 +13,7 @@
         bind:playerError="onPlayerError"
         bind:error="onLivePlayerError"
         bind:statechange="onLivePlayerStateChange"
-        bind:netstatus="onLivePlayerNetStatusChange"
+        bind:netstatus="onLivePlayerNetStatus"
       />
       <view class="video-info">
         <view class="text-box lines-3">
