--- a/demo/miniprogram/components/iot-p2p-mjpg-player/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-mjpg-player/player.wxss
@@ -39,7 +39,7 @@
   margin-right: 20rpx;
 }
 
-.debug-info-container {
+.iot-mjpg-player .debug-info-container {
   position: absolute;
   width: 100%;
   max-height: 720rpx;
