--- a/demo/miniprogram/components/mock-p2p-player/player.wxml
+++ b/demo/miniprogram/components/mock-p2p-player/player.wxml
@@ -1,4 +1,5 @@
 <view class="mock-p2p-player">
+  <view>mockType: {{type}}</view>
   <view wx:if="{{hasCtx}}">
     <view>totalBytes: {{totalBytes}}</view>
   </view>
