--- a/demo/miniprogram/pages/test-p2p-player/player.wxss
+++ b/demo/miniprogram/pages/test-p2p-player/player.wxss
@@ -13,7 +13,7 @@
   height: 100% !important;
 }
 
-.video-info {
+.player-container .video-info {
   position: absolute;
   left: 20rpx;
   top: 20rpx;
