--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxss
@@ -64,7 +64,7 @@
   margin-right: 20rpx;
 }
 
-.debug-info-container {
+.iot-player .debug-info-container {
   position: absolute;
   width: 100%;
   max-height: 720rpx;
