--- a/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxss
+++ b/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxss
@@ -65,7 +65,7 @@
   margin-right: 20rpx;
 }
 
-.debug-info-container {
+.iot-pusher .debug-info-container {
   position: absolute;
   width: 100%;
   max-height: 720rpx;
