--- a/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-demo-1vN/demo.wxml
@@ -1,36 +1,35 @@
-<view class="page-body">
-  <view class="page-section" wx:if="{{cfg}}">
+<view wx:if="{{cfg}}">
+  <view wx:if="{{!targetId}}" class="page-body">
     <iot-p2p-input
-      wx:if="{{!targetId}}"
       cfg="{{cfg}}"
       bind:startPlayer="onStartPlayer"
     />
-    <view wx:if="{{playerId && p2pMode && targetId}}">
-      <iot-p2p-player-ipc
-        wx:if="{{p2pMode === 'ipc'}}"
-        id="{{playerId}}"
-        targetId="{{targetId}}"
-        sceneType="{{sceneType}}"
-        flvUrl="{{flvUrl}}"
-        mjpgFile="{{mjpgFile}}"
-        productId="{{productId}}"
-        deviceName="{{deviceName}}"
-        xp2pInfo="{{xp2pInfo}}"
-        liveStreamDomain="{{liveStreamDomain}}"
-        options="{{options}}"
-        onlyp2pMap="{{onlyp2pMap}}"
-        bind:playError="onPlayError"
-      />
-      <iot-p2p-player-server
-        wx:if="{{p2pMode === 'server'}}"
-        id="{{playerId}}"
-        targetId="{{targetId}}"
-        flvUrl="{{flvUrl}}"
-        codeUrl="{{codeUrl}}"
-        onlyp2p="{{onlyp2p}}"
-        bind:playError="onPlayError"
-      />
-      <view class="top-right-btn" bind:tap="onOpenPage">…</view>
-    </view>
+  </view>
+  <view wx:if="{{playerId && p2pMode && targetId}}">
+    <iot-p2p-player-ipc
+      wx:if="{{p2pMode === 'ipc'}}"
+      id="{{playerId}}"
+      targetId="{{targetId}}"
+      sceneType="{{sceneType}}"
+      flvUrl="{{flvUrl}}"
+      mjpgFile="{{mjpgFile}}"
+      productId="{{productId}}"
+      deviceName="{{deviceName}}"
+      xp2pInfo="{{xp2pInfo}}"
+      liveStreamDomain="{{liveStreamDomain}}"
+      options="{{options}}"
+      onlyp2pMap="{{onlyp2pMap}}"
+      bind:playError="onPlayError"
+    />
+    <iot-p2p-player-server
+      wx:if="{{p2pMode === 'server'}}"
+      id="{{playerId}}"
+      targetId="{{targetId}}"
+      flvUrl="{{flvUrl}}"
+      codeUrl="{{codeUrl}}"
+      onlyp2p="{{onlyp2p}}"
+      bind:playError="onPlayError"
+    />
+    <view class="top-right-btn" bind:tap="onOpenPage">…</view>
   </view>
 </view>
