--- a/demo/miniprogram/common.wxss
+++ b/demo/miniprogram/common.wxss
@@ -16,6 +16,10 @@
   margin-right: 10rpx;
 }
 
+.prop-item {
+  margin-bottom: 10rpx;
+}
+
 .text-box {
   box-sizing: border-box;
   padding: 0 10rpx;
