--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxss
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxss
@@ -5,17 +5,21 @@
 .iot-p2p-player-ipc {
   box-sizing: border-box;
   position: relative;
-  padding-top: 420rpx;
-  height: calc(100vh - 50rpx);
-  overflow: scroll;
 }
 
 .player-wrap {
-  position: absolute;
-  top: 0;
+  box-sizing: border-box;
+  position: relative;
   width: 750rpx;
   height: 420rpx;
-  z-index: 1;
+}
+
+.sections-wrap {
+  box-sizing: border-box;
+  position: relative;
+  height: calc(100vh - 420rpx);
+  padding: 20rpx 0;
+  overflow: scroll;
 }
 
 .ptz-panel-wrap {
@@ -24,8 +28,4 @@
   align-items: center;
   justify-content: center;
   width: 100%;
-}
-
-.player-prop-item, .pusher-prop-item {
-  margin-bottom: 10rpx;
 }
