--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxml
@@ -1,36 +1,38 @@
-<view class="component">
+<view class="iot-player {{playerClass}}">
   <view class="player-container">
     <p2p-player
-      wx:if="{{needPlayer && hasPlayer}}"
+      wx:if="{{canUseP2P && needPlayer && hasPlayer}}"
       id="{{playerId}}"
       autoplay="{{autoPlay}}"
-      mode="live"
-      minCache="0.2"
-      maxCache="0.5"
-      muted="{{muted}}"
+      mode="{{mode}}"
+      minCache="{{minCache}}"
+      maxCache="{{maxCache}}"
+      muted="{{superMuted || muted}}"
+      soundMode="{{soundMode}}"
       orientation="{{orientation}}"
+      acceptLivePlayerEvents="{{acceptLivePlayerEvents}}"
       bind:playerReady="onPlayerReady"
       bind:playerStartPull="onPlayerStartPull"
       bind:playerClose="onPlayerClose"
       bind:playerError="onPlayerError"
       bind:error="onLivePlayerError"
       bind:statechange="onLivePlayerStateChange"
-      bind:netstatus="onLivePlayerNetStatusChange"
+      bind:netstatus="onLivePlayerNetStatus"
     />
-    <view wx:if="{{!needPlayer}}" class="mock-player">
-      <view wx:if="{{playerState === 'PlayerReady'}}">
-        <view>totalBytes: {{totalBytes}}</view>
-      </view>
-      <view wx:else>
-        <view>playerState: {{playerState}}</view>
-      </view>
-    </view>
+    <mock-p2p-player
+      wx:if="{{canUseP2P && !needPlayer}}"
+      bind:playerReady="onPlayerReady"
+      bind:playerStartPull="onPlayerStartPull"
+      bind:playerClose="onPlayerClose"
+      bind:playerError="onPlayerError"
+    />
     <view class="player-message" bindtap="onClickRetry">{{playerMsg}}</view>
-    <view class="player-controls-container right">
+    <view wx:if="{{showControlRightBtns}}" class="player-controls-container right">
       <view class="player-controls">
         <view class="player-control-item">{{playerPaused ? 'paused' : ''}}</view>
         <view class="player-control-item" bindtap="changeMuted">{{muted ? 'muted' : 'notMuted'}}</view>
         <view class="player-control-item" bindtap="changeOrientation">{{orientation}}</view>
+        <view class="player-control-item" bindtap="snapshotAndSave">snapshot</view>
       </view>
     </view>
     <view class="debug-info-switch-container">
@@ -46,15 +48,16 @@
           <text class="text-break">{{flvFile}}</text>
         </view>
       </view>
+      <view>playerMode: {{mode}}</view>
       <view>playerState: {{playerState}} <text wx:if="{{playerPaused}}">pauseType: {{playerPaused}}</text></view>
       <view>p2pState: {{p2pState}}</view>
-      <view>streamState: {{streamState}} {{playing ? 'playing' : ''}}</view>
+      <view>streamState: {{streamState}}</view>
       <view>
-        totalBytes: {{totalBytes}}
+        playing: {{playing}}
         <text class="text-btn float-right" bindtap="toggleSlow">{{isSlow ? '恢复' : '模拟丢包'}}</text>
       </view>
       <view>
-        record: 
+        record:
         <text wx:if="{{streamState === 'StreamDataReceived' || isRecording}}" class="text-btn float-right" bindtap="toggleRecording">{{isRecording ? '停止录像' : '开始录像'}}</text>
         <text wx:else class="text-btn float-right disabled">开始播放后才可以录像</text>
       </view>
