--- a/demo/miniprogram/pages/xp2p-singleplayer/demo.wxml
+++ b/demo/miniprogram/pages/xp2p-singleplayer/demo.wxml
@@ -1,27 +1,26 @@
 <view class="page-body">
-  <view class="page-section page-section-gap" wx:if="{{playerId && mode && targetId}}">
+  <view class="page-section page-section-gap" wx:if="{{playerId && p2pMode && targetId}}">
     <view class="page-section-title player-title">{{playerTitle || targetId}}</view>
     <iot-p2p-player-ipc
-      wx:if="{{mode === 'ipc'}}"
+      wx:if="{{p2pMode === 'ipc'}}"
       id="{{playerId}}"
       targetId="{{targetId}}" 
+      sceneType="{{sceneType}}"
       flvUrl="{{flvUrl}}" 
       productId="{{productId}}" 
       deviceName="{{deviceName}}" 
       xp2pInfo="{{xp2pInfo}}" 
       onlyp2p="{{onlyp2p}}"
       bind:playError="onPlayError"
-      bind:systemPermissionDenied="onPlayerSystemPermissionDenied"
     />
     <iot-p2p-player-server
-      wx:if="{{mode === 'server'}}"
+      wx:if="{{p2pMode === 'server'}}"
       id="{{playerId}}"
       targetId="{{targetId}}" 
       flvUrl="{{flvUrl}}" 
       codeUrl="{{codeUrl}}" 
       onlyp2p="{{onlyp2p}}"
       bind:playError="onPlayError"
-      bind:systemPermissionDenied="onPlayerSystemPermissionDenied"
     />
   </view>
 </view>
