--- a/demo/miniprogram/components/iot-p2p-common-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-player/player.wxml
@@ -1,4 +1,4 @@
-<view class="iot-player {{playerClass}}">
+<view class="component iot-player {{playerClass}}">
   <view class="player-container">
     <p2p-player
       wx:if="{{canUseP2P && needPlayer && hasPlayer}}"
@@ -42,6 +42,7 @@
   <view wx:if="{{showDebugInfo}}" class="debug-info-container">
     <view class="debug-info">
       <view>plugin: xp2p {{xp2pVersion}} / p2p-player {{p2pPlayerVersion}}</view>
+      <view>xp2pUUID: {{xp2pUUID}}</view>
       <view>
         <view>flvFile: </view>
         <view class="text-box lines-2">
