--- a/demo/miniprogram/components/iot-p2p-mjpg-player/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-mjpg-player/player.wxml
@@ -1,5 +1,5 @@
-<view class="iot-mjpg-player {{playerClass}}">
-  <view class="mjpg-player-container">
+<view class="component iot-mjpg-player {{playerClass}}">
+  <view class="player-container">
     <p2p-mjpg-player
       wx:if="{{needPlayer && hasPlayer}}"
       bind:playerReady="onPlayerReady"
@@ -30,6 +30,7 @@
   <view wx:if="{{showDebugInfo}}" class="debug-info-container">
     <view class="debug-info">
       <view>plugin: xp2p {{xp2pVersion}} / p2p-player {{p2pPlayerVersion}}</view>
+      <view>xp2pUUID: {{xp2pUUID}}</view>
       <view>
         <view>mjpgFile: </view>
         <view class="text-box lines-2">
