--- a/demo/miniprogram/components/iot-p2p-voice/voice.wxml
+++ b/demo/miniprogram/components/iot-p2p-voice/voice.wxml
@@ -1,4 +1,4 @@
-<view class="iot-p2p-voice">
+<view class="component iot-p2p-voice">
   <view wx:if="{{needDuplex}}">
     <iot-p2p-common-pusher
       id="{{pusherId}}"
