--- a/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
+++ b/demo/miniprogram/components/iot-p2p-player-ipc/player.wxml
@@ -18,6 +18,7 @@
       liveStreamDomain="{{liveStreamDomain}}"
       checkFunctions="{{checkFunctions}}"
       onlyp2p="{{onlyp2pMap && onlyp2pMap.flv}}"
+      bind:playerStateChange="onPlayerStateChange"
       bind:p2pStateChange="onP2PStateChange"
       bind:streamStateChange="onStreamStateChange"
       bind:playError="onPlayError"
@@ -80,12 +81,14 @@
       </view>
       <view wx:if="{{innerSections && innerSections.voice}}" class="component-section">
         <iot-p2p-voice
+          wx:if="{{voiceCompId}}"
           id="{{voiceCompId}}"
           targetId="{{targetId}}"
           productId="{{productId}}"
           deviceName="{{deviceName}}"
           intercomType="{{innerOptions.intercomType}}"
           p2pReady="{{p2pReady}}"
+          bind:ready="onVoiceReady"
           bind:voiceStateChange="onVoiceStateChange"
           bind:beforeStartVoice="onBeforeStartVoice"
           bind:afterStopVoice="onAfterStopVoice"
