feat: 升级插件、优化性能、完善log

--- a/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxml
+++ b/demo/miniprogram/components/iot-p2p-common-pusher/pusher.wxml
@@ -12,12 +12,9 @@
       audioVolumeType="voicecall"
       acceptLivePusherEvents="{{acceptLivePusherEvents}}"
       flvFunctions="{{flvFunctions}}"
+      ignoreEmptyAudioTag="{{ignoreEmptyAudioTag}}"
       bind:pusherReady="onPusherReady"
       bind:pusherStartPush="onPusherStartPush"
-      bind:pusherFlvHeader="onPusherFlvHeader"
-      bind:pusherFlvAudioTag="onPusherFlvTag"
-      bind:pusherFlvVideoTag="onPusherFlvTag"
-      bind:pusherFlvDataTag="onPusherFlvTag"
       bind:pusherClose="onPusherClose"
       bind:pusherError="onPusherError"
       bind:error="onLivePusherError"
