--- a/demo/miniprogram/pages/test-p2p-player/player.wxml
+++ b/demo/miniprogram/pages/test-p2p-player/player.wxml
@@ -4,10 +4,11 @@
       <p2p-player
         wx:if="{{playerId}}"
         id="{{playerId}}"
+        mode="{{playerMode}}"
+        minCache="{{minCache}}"
+        maxCache="{{maxCache}}"
         autoplay="{{autoplay}}"
         orientation="vertical"
-        minCache="0.2"
-        maxCache="0.8"
         bind:playerReady="onPlayerReady"
         bind:playerStartPull="onPlayerStartPull"
         bind:playerClose="onPlayerClose"
