--- a/demo/miniprogram/pages/user-files/files.wxml
+++ b/demo/miniprogram/pages/user-files/files.wxml
@@ -18,11 +18,11 @@
     <view wx:for="{{recordList}}" wx:key="fileName" class="record-item">
       {{item.fileName}} <text class="info">{{item.size}} Bytes</text>
       <view>
-        <text class="left-btn" wx:if="{{item.isFLV || item.isMJPG}}" bindtap="playRecord" data-index="{{index}}">播放</text>
+        <text class="left-btn" wx:if="{{item.showPlay}}" bindtap="playRecord" data-index="{{index}}">播放</text>
         <!-- <text class="right-btn" bindtap="removeFile" data-index="{{index}}">删除</text> -->
         <text class="right-btn" wx:if="{{!isDevTools}}" bindtap="sendFile" data-index="{{index}}">发送</text>
         <text class="right-btn" wx:if="{{isDevTools}}" bindtap="saveFileInDevTools" data-index="{{index}}">保存</text>
-        <text class="right-btn" wx:if="{{item.isMP4 || item.isFLV || item.isMJPG}}" bindtap="saveToAlbum" data-index="{{index}}">保存到相册</text>
+        <text class="right-btn" wx:if="{{item.showSave}}" bindtap="saveToAlbum" data-index="{{index}}">保存到相册</text>
         <!-- <text class="right-btn" wx:if="{{!item.isMP4}}" bindtap="renameMP4" data-index="{{index}}">重命名为mp4</text> -->
       </view>
     </view>
